# line-rs

./: .gitignore  Cargo.toml  README.md  Roadmap.md  TODO.md
src/: cli.rs  line_reader.rs  line_selector.rs  main.rs  output.rs
src/output/: colored_and_decorated.rs  colored_and_not_decorated.rs  not_colored_decorated.rs  not_colored_not_decorated.rs
tests/: cli.rs
