[package]
name = "line-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Extract lines from files without hacks!"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
content_inspector = "0.2.4"

[dev-dependencies]
tempfile = "3.20.0"
