[package]
name = "line-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Extract lines from files without hacks!"

[[bin]]
name = "line"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
content_inspector = "0.2.4"

[dev-dependencies]
assert_cmd = { version = "2.0.17", features = ["color"] }
assert_fs = { version = "1.1.3", features = ["color"] }
predicates = { version = "3.1.3", features = ["color"] }
tempfile = "3.20.0"
